Bug 890524 - Fix Ion perf regression with SETELEM and double arrays. r=h4writer