js/src/ion/LOpcodes.h
@@ -131,6 +131,7 @@
     _(Slots)                        \
     _(Elements)                     \
     _(ConvertElementsToDoubles)     \
+    _(MaybeToDoubleElement)         \
     _(LoadSlotV)                    \
     _(LoadSlotT)                    \
     _(StoreSlotV)                   \
